# pankat-rs

./: .envrc  .gitignore  .replit  Cargo.toml  README.md  flake.nix  generate_favicon.py  justfile  pankat-wasm.nix  pankat.nix  pankat.toml  pyproject.toml  replit.nix
documents/: dd.md  index.html
documents/assets/css/: style.css  timeliner.css
documents/assets/js/: pankat-timeline.js  pankat-websocket.js
documents/assets/pandoc-lua/: create-anchors.lua
documents/assets/pankat-wasm/: README.md  package.json  pankat_wasm.js  pankat_wasm_bg.wasm
documents/assets/templates/: content-template.html  most-recent-article.html  navTitleArticleSource.html  navigation-articles-template.html  navigation-series-template.html  standalone-template.html
documents/example.de/: media
documents/example.de/posts/: about.mdwn
documents/example.de/posts/libnix/: libnix_cygwin_status.mdwn  libnix_volth's_work.mdwn
documents/example.de/posts/libnix/test/: libnix_fixPath.mdwn
documents/lastlog.de/posts/libnix/: libnix.mdwn  libnix_cargo-nix-backend.mdwn  libnix_cygwin_status.mdwn  libnix_fixPath.mdwn  libnix_mingw_status.mdwn  libnix_roadmap.mdwn  libnix_volth's_work.mdwn
documents/pandoc-lua/: shifted-numbered-headings.lua
documents/pkg/: frontend.d.ts  frontend.js  frontend_bg.wasm  frontend_bg.wasm.d.ts
documents/static/: index.html
documents/static/js/: pankat-websocket.js
documents/static/templates/: article-template.html  navTitleArticleSource.html
documents/static/wasm/: frontend.d.ts  frontend.js  frontend_bg.wasm  frontend_bg.wasm.d.ts
documents/static/wasm/crates/sauron/examples/delay/: serve.sh
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/crates/percy-dom/: Cargo.toml
frontend/crates/percy-dom/src/: pdom.rs
frontend/src/: lib.rs
migrations/2025-01-07-112240_create_database_structure/: up.sql
migrations/2025-02-07-221133_create_articles_structure/: down.sql  up.sql
pankat-wasm/: Cargo.toml  flake.nix  rust-toolchain.toml
pankat-wasm/src/: lib.rs
src/: articles.rs  auth.rs  config.rs  db.rs  error.rs  file_monitor.rs  handlers.rs  main.rs  registry.rs  render.rs  shutdown_helper.rs
src/articles/: mod.rs  neighbours.rs  tests.rs  timeline.rs  utils.rs
src/articles/plugins/: draft.rs  img.rs  meta.rs  mod.rs  series.rs  specialpage.rs  summary.rs  tag.rs  title.rs
src/collection/: blog.rs
src/db/: article.rs  articles.rs  cache.rs  mod.rs  schema.rs  tests.rs  users.rs
src/db/tests/: del.rs  del_by_id.rs  del_by_src_file_name.rs  get_all_articles.rs  get_all_series_from_visible_articles.rs  get_all_tags.rs  get_drafts.rs  get_most_recent_article.rs  get_prev_and_next_article.rs  get_prev_and_next_article_for_series.rs  get_special_pages.rs  get_visible_articles.rs  get_visible_articles_by_series.rs  get_visible_articles_by_tag.rs  mod.rs  set.rs
src/registry/: mod.rs
src/renderer/: .pandoc.rs.1960147054~  html.rs  mod.rs  pandoc.rs  tests.rs  utils.rs
