[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
tower = "0.5"
jsonwebtoken = "9.2"
diesel = { version = "2.1.0", features = ["sqlite", "r2d2"] }
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }
bcrypt = "0.15"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
libsqlite3-sys = "0.26.0"
notify = { version = "6.1", features = ["serde"] }
futures = "0.3"
mime_guess = "2.0.4"

[build-dependencies]
diesel_cli = { version = "2.1.0", default-features = false, features = ["sqlite"] }