[package]
name = "pankat"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json", "ws"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
tower = "0.5"
jsonwebtoken = "9.2"
diesel = { version = "2.1.0", features = ["sqlite", "r2d2", "chrono", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }
bcrypt = "0.15"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
libsqlite3-sys = "0.26.0"
notify = { version = "6.1", features = ["serde"] }
futures = "0.3"
mime_guess = "2.0.4"
virtual-dom-rs = "=0.6.12"
virtual-node = "=0.2.7"
rand = "0.8"
lazy_static = "1.5.0"
gloo-timers = { version = "0.3.0", features = ["futures"] }
handlebars = "6.3.0"
clap = { version = "4.5.27", features = ["string"] }
regex = "1.11.1"
chrono = "0.4.39"
twox-hash = "2.1.0"
mustache = "0.9.0"
serde = "1.0.218"
scopeguard = "1.2.0"
tokio-stream = "0.1.17"
futures-util = "0.3.31"
colored = "3.0.0"

[build-dependencies]
diesel_cli = { version = "2.1.0", default-features = false, features = ["sqlite"] }
