[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0"
reqwest = { version = "0.11", features = ["json"] }
web-sys = { version = "0.3", features = ["WebSocket", "console", "MessageEvent"] } 
wasm-bindgen = "0.2.100"
virtual-dom-rs = "=0.6.12"
virtual-node = "=0.2.7"
log = "*"

[lib]
crate-type = ["cdylib", "rlib"]