[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0"
reqwest = { version = "0.11", features = ["json"] }
web-sys = { version = "0.3", features = ["WebSocket", "console", "MessageEvent", "Window", "Location"] } 
wasm-bindgen = "0.2.100"
percy-dom = "=0.10.0"
virtual-node = "=0.5"
log = "0.4.25"
gloo-net = "0.6.0"
gloo-utils = "0.2.0"
futures = "0.3.31"
wasm-bindgen-futures = "0.4.50"
console_log = "1.0.0"

[lib]
crate-type = ["cdylib", "rlib"]