[package]
name = "pankat-wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0"
reqwest = { version = "0.11", features = ["json"] }
web-sys = { version = "0.3", features = ["WebSocket", "console", "MessageEvent", "Window", "Location", "Element", "DomTokenList", "CssStyleDeclaration"] } 
wasm-bindgen = "0.2.100"
log = "0.4.25"
futures = "*"
wasm-bindgen-futures = "0.4.50"
console_log = "1.0.0"
gloo-net = { version = "0.5.0", default-features = false, features = ["websocket"] }
gloo-utils = { version = "0.2.0", default-features = false }
gloo-timers = { version = "0.3.0", features = ["futures"] }
anyhow = "1.0.95"
sauron-core = { version = "0.61.9", features = ["with-dom"] }
sauron-html-parser = "*"
lazy_static = "1.5.0"
tokio = { version = "1.43.0", features = ["tokio-macros"] }

[lib]
crate-type = ["cdylib", "rlib"]

[patch.crates-io.sauron-core]
git = "https://github.com/qknight/sauron.git"
branch = "diff_result_extension"

[patch.crates-io.sauron-html-parser]
git = "https://github.com/qknight/sauron.git"
branch = "diff_result_extension"
